--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,6 +5,10 @@ RUN apt-get update \
   && apt-get install -y zlib1g-dev mariadb-client vim libzip-dev \
   && docker-php-ext-install zip pdo_mysql
 
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
+RUN apt-get install -y nodejs
+RUN npm install npm@latest -g
+
 #Composer install
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php composer-setup.php
