--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dependencies": {
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "@types/react-router-dom": "^5.3.3",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.1"
     }
 }
