--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/react-router-dom": "^5.3.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.3.1",
         "react-router-dom": "^6.2.1"
     }
 }
